ft/src/tui/snapshots/ft__tui__tests__notes_create_collision_prompt_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 4290
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Journal  │  6 Review   
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│                                                                              │
│  o     open file / heading                                                   │
│  m     move section(s) to another file                                       │
│  c     create note (blank)                                                   │
│  C     create note from template                                             │
│  t     open to┌ create · collision ──────────────────────────┐               │
│  p     periodi│   target already exists: inbox/existing.md   │               │
│  ?     show th│                                              │               │
│  Esc   close o│  [O]verwrite     [U]se existing     [C]ancel │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
