ft/src/tui/snapshots/ft__tui__tests__notes_create_filename_prompt_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Welcome  │  2 Tasks  │  3 Notes                                             
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│                                                                              │
│  o     open file / heading                                                   │
│  m     move section(s) to another file                                       │
│  c     create note (blank)                                                   │
│  C     create note from template                                             │
│  t     open to┌ create · 2/2 filename · . ───────────────────┐               │
│  p     periodi│▏ filename: scrat█                            │               │
│  ?     show th│                                              │               │
│  Esc   close o│ Enter commit   Esc back   Ctrl+W delete word │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
