ft/src/tui/snapshots/ft__tui__tests__notes_create_folder_picker_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Welcome  │  2 Tasks  │  3 Notes                                             
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│               ┌ create · 1/2 folder · blank ─────────────────┐               │
│  o     open fi│┌ find ──────────────────────────────────────┐│               │
│  m     move se││type to search…                             ││               │
│  c     create │└────────────────────────────────────────────┘│               │
│  C     create │┌ recent · type to search ───────────────────┐│               │
│  t     open to││▶ .                                         ││               │
│  p     periodi││  inbox                                     ││               │
│  ?     show th││  proj                                      ││               │
│  Esc   close o││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               │└────────────────────────────────────────────┘│               │
│               │                                              │               │
│               │         Enter use folder   Esc back          │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
