ft/src/tui/snapshots/ft__tui__tests__notes_create_template_picker_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 4193
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Journal  │  6 Review   
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│               ┌ create · 1/4 template ───────────────────────┐               │
│  o     open fi│┌ find ──────────────────────────────────────┐│               │
│  m     move se││type to search…                             ││               │
│  c     create │└────────────────────────────────────────────┘│               │
│  C     create │┌ recent · type to search ───────────────────┐│               │
│  t     open to││▶ new.md                                    ││               │
│  p     periodi││  quick-add.md                              ││               │
│  ?     show th││                                            ││               │
│  Esc   close o││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               │└────────────────────────────────────────────┘│               │
│               │                                              │               │
│               │       Enter use template   Esc cancel        │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
