ft/src/tui/snapshots/ft__tui__tests__notes_create_var_prompt_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 4498
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Journal  │  6 Review   
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│                                                                              │
│  o     open file / heading                                                   │
│  m     move section(s) to another file                                       │
│  r     reslice synth section                                                 │
│  c     create ┌ create · 4/4 vars · ./lunch.md · 1/1 ────────┐               │
│  C     create │▏ name = Sandw█                               │               │
│  t     open to│                                              │               │
│  p     periodi│                                              │               │
│  ?     show th│                                              │               │
│  Esc   close o│                                              │               │
│               │        Enter next   Esc cancel create        │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
