ft/src/tui/snapshots/ft__tui__tests__notes_move_compose_renamed_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 3750
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Journal  │  6 Review   
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — O┌ move · 4/4 compose · 1 pending → archive.md ─────────┐           │
│           │  · H1  Archive                                       │           │
│  o     ope│  ·   H2  Old                                         │           │
│  m     mov│▶ + H1  Project  → Renamed Project                    │           │
│  c     cre│                                                      │           │
│  C     cre│                                                      │           │
│  t     ope│                                                      │           │
│  p     per│                                                      │           │
│  ?     sho│                                                      │           │
│  Esc   clo│                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │ ↑/↓ focus   Shift+↑/↓ reorder   ←/→ level   r rename │           │
│           └──────────────────────────────────────────────────────┘           │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
