ft/src/tui/snapshots/ft__tui__tests__notes_move_compose_renaming_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Welcome  │  2 Tasks  │  3 Notes                                             
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — O┌ move · 4/4 compose · 1 pending → archive.md ─────────┐           │
│           │  · H1  Archive                                       │           │
│  o     ope│  ·   H2  Old                                         │           │
│  m     mov│▶ + H1  Project                                       │           │
│  c     cre│                                                      │           │
│  C     cre│                                                      │           │
│  t     ope│                                                      │           │
│  p     per│                                                      │           │
│  ?     sho│                                                      │           │
│  Esc   clo│                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │▏ rename → Sprint█                                    │           │
│           │                                                      │           │
│           │          Enter commit rename   Esc discard           │           │
│           └──────────────────────────────────────────────────────┘           │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
