ft/src/tui/snapshots/ft__tui__tests__notes_move_multiselect_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 2466
expression: frame
---
  1 Welcome  │  2 Tasks  │  3 Notes  │  4 Timeblocks                            
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│           ┌ move · 2/4 select · project.md ──────────────────────┐           │
│  o     ope│  □ H1  Project                                       │           │
│  m     mov│▶ ■   H2  Background                                  │           │
│  c     cre│  ▣     H3  Details                                   │           │
│  C     cre│  □   H2  Tasks                                       │           │
│  t     ope│                                                      │           │
│  p     per│                                                      │           │
│  ?     sho│                                                      │           │
│  Esc   clo│                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │   ↑/↓ focus   Space toggle   Enter next   Esc back   │           │
│           └──────────────────────────────────────────────────────┘           │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
