ft/src/tui/snapshots/ft__tui__tests__notes_move_new_target_collision_prompt_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 4744
expression: frame
---
  1 Welcome  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Graph                
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│                                                                              │
│  o     open file / heading                                                   │
│  m     move section(s) to another file                                       │
│  c     create note (blank)                                                   │
│  C     create note from template                                             │
│  t     open to┌ move · new target · collision ───────────────┐               │
│  p     periodi│    target already exists: proj/existing.md   │               │
│  ?     show th│                                              │               │
│  Esc   close o│  [O]verwrite     [U]se existing     [C]ancel │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
